[metadata]
name = radar-multipath-classification
description = Research of radar multipath classification and reflective surface detection.
url = https://github.com/daninost/radar-multipath-classification.git
long_description = file: README.md
author = Stav Danino
author_email = daninost@post.bgu.ac.il
keywords = python
license = MIT Licence

[options]
zip_safe = False
include_package_data = True
package_dir=
    =src
packages=find:
install_requires =
    nn-template-core>=0.1.0,<0.2

    # Add project specific dependencies
    # Stuff easy to break with updates
    pytorch-lightning
    hydra-core
    wandb
    streamlit
    # hydra-joblib-launcher

    # Stable stuff usually backward compatible
    rich
    dvc
    python-dotenv
    matplotlib
    stqdm

[options.packages.find]
where=src

[options.package_data]
* = *.txt, *.md

[options.extras_require]
docs =
    mkdocs
    mkdocs-material
    mike

test =
    pytest
    pytest-cov

dev =
    black
    flake8
    isort
    pre-commit
    bandit
    %(test)s
    %(docs)s
